# boxrts

./: .gitignore  CMakeLists.txt  COPYING  LICENSE  Makefile  README.md  package-lock.json  tsconfig.json
client/: Camera.ts  CameraController.ts  GameClient.ts  InputControllers.ts  KeyInputMixin.ts  MainLoop.ts  MessageRouter.ts  Renderer.ts  ResourceLoaders.ts  Scene.ts  WebSocketClient.ts  main.ts  mixins.ts
client/mixins/: ElementFocusMixin.ts  KeyInputMixin.ts
client/render/: ImageTexture.ts  InstancedObject.ts  Material.ts  Mesh.ts  MeshController.ts  RenderState.ts  Renderer.ts  SceneNode.ts  ShaderProgram.ts  SpritesheetInfo.ts  TilesheetInfo.ts
server/: event.hpp  main.cpp  player.cpp  player.hpp  serialized_event.hpp  server.cpp  server.hpp  websocket_server.cpp  websocket_server.hpp  world.cpp  world.hpp  world_server.cpp  world_server.hpp
src/client/: WebSocketClient.ts  main.ts
src/server/: main.cpp  server.cpp  server.hpp
static/: WebSocketClient.js  WebSocketClient.js.map  constants.json  index.html  main.js  main.js.map  style.css
static/json/: bootstrap.json  color.json  medieval_tilesheet.json  scifi_tilesheet.json  texture.json
static/objects/: basicCharacter.obj.mtl
static/shaders/: color.json  colorFragment.glsl  colorVertex.glsl  texture.json  textureFragment.glsl  textureVertex.glsl
